<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewOnboardingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome! Please enter your information"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp" />

        <!-- Eingabefelder -->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Weight (kg)"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Height (cm)"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextKfa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Body Fat Percentage (KFA)"
            android:inputType="number" />

        <!-- Hier können auch Hilfebilder als ImageView hinzugefügt werden -->

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
