<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/o_birthday_question"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSelectDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/o_birthday_selection"
        android:backgroundTint="@color/background"
        android:textColor="@android:color/black"
        android:icon="@drawable/ic_calendar"
        android:padding="12dp"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/o_next"
        android:textColor="@android:color/black" />

</LinearLayout>
