<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:text="@string/o_training_days_question"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewTrainingDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/o_training_days_selection"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white" />

    <SeekBar
        android:id="@+id/seekBarTrainingDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="7"
        android:padding="8dp"
        android:progress="3" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/o_finish"
        android:textColor="@android:color/black" />

</LinearLayout>
